design fixies and new command
/players - get a list of players with total, afk and no afk counts

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,3 +10,5 @@ commands:
     description: vote for somebody
   immune:
     description: add,check or remove immune players
+  players:
+    description: get the list of players with count of total,afk and without afk
