--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,14 +1,15 @@
 name: VoteBan
 description: vote for bans and ban players without moderators
 main: me.nelson131.voteban.VoteBan
-version: 1.0.1
+version: 1.1.0
 author: nelson131
 commands:
   voteban:
     description: create a voteban poll
   vote:
     description: vote for somebody
-  immune:
-    description: add,check or remove immune players
   players:
     description: get the list of players with count of total,afk and without afk
+permissions:
+  voteban.immune:
+    description: immunity for player
